# mgf_ir_t2g

./: CITATION.cff  README.md  pyproject.toml
src/t2g_jt_soc/: __init__.py  dyson.py  magneto.py  phys_prop.py
t2g_jt_soc/: __init__.py  dyson.py  magneto.py  phys_prop.py
